# Production_Agents

./: LICENSE  README.md  main.py  pyproject.toml
src/HarryPotter/: custom-rag.ipynb  rag-final.ipynb  rag.ipynb  token-based-chunking.ipynb
src/data-analysis-agent/examples/: data-analysis.ipynb
src/langchain/Guard-Rail/: guard.ipynb
src/langchain/RAG/: 1.ipynb  document-embedding.ipynb  document-loader.ipynb  document-splitters.ipynb  rag-revist.ipynb  rag.ipynb  rags.ipynb  text.txt
src/langchain/semantic-search/: search-engine.ipynb
