[project]
name = "production-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.4.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.9",
    "pypdf>=6.7.0",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "slack-sdk>=3.40.0",
]
