[project]
name = "production-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "deepagents>=0.4.1",
    "firecrawl-py>=4.15.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.9",
    "langchain-text-splitters>=1.1.0",
    "lxml>=6.0.2",
    "playwright>=1.58.0",
    "pypdf>=6.7.0",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "slack-sdk>=3.40.0",
    "unstructured>=0.20.2",
]
